--- a/Aplicaciones/contacto/templates/pages/contact.html
+++ b/Aplicaciones/contacto/templates/pages/contact.html
@@ -61,9 +61,15 @@
                     <!---->
                     <!-- This is what your users will see when there is-->
                     <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                    <div class="d-none" id="submitErrorMessage">
+                    </div>
+                    <div class="text-center text-danger mb-3">Error sending message!
+                    </div>
                     <!-- Submit Button-->
-                    <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button></div>
+                    <div class="d-grid">
+                        
+                        <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Prueba</button>
+                    </div>
                 </form>
             </div>
     </div>
