--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/resume">Resumen</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="/resume">Resumen</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="{% url 'Proyectos' %}">Projectos</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contactos</a></li> 
                 <li class="nav-item"><a class="nav-link" href="{% url 'sitios' %}">Ubicaciones</a></li>
